--- a/template.ejs
+++ b/template.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=BioRhyme+Expanded:200,300,400,700,800" rel="stylesheet">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
   <body>
